fixing spacing on home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,8 +133,8 @@ float: left;
 .facts-gaa {
     max-width: 20%;
     margin: 3%;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 .facts-gaa h2 {
     margin: 10%;
